config/manager/manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
  labels:
    control-plane: controller-manager
spec:
  selector:
    matchLabels:
      control-plane: controller-manager
      name: activemq-artemis-operator
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        control-plane: controller-manager
        name: activemq-artemis-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - command:
        - /home/activemq-artemis-operator/bin/entrypoint
        args:
        # Explicitly set the logging level.
        # Valid values are debug, info, and error
        # from most to least.
        # If running entrypoint_debug then use '-- --zap-level debug'
        - --zap-log-level=info
        - --zap-encoder=console
        - --zap-time-encoding=iso8601
        - --leader-elect
        image: controller:latest
        # imagePullPolicy: Always
        name: manager
        ports:
        - name: http-metrics
          containerPort: 8383
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        terminationMessagePolicy: FallbackToLogsOnError
        resources:
          requests:
            cpu: 150m
            memory: 128Mi
            ephemeral-storage: 50Mi
          limits:
            cpu: 150m
            memory: 128Mi
            ephemeral-storage: 2Gi
      serviceAccountName: controller-manager
      terminationGracePeriodSeconds: 10
